syntax = "proto3";

package kvs;

message kvsRemoteMsg {
    // 1 ~ 10 : normal field
    // 11 ~ 20: value field
    // 21 ~ : external field
    uint64      sessionID = 1;

    // assign to operate
    enum Operate {
        NoOperate               = 0;
        GetAllKeys              = 1;    // virtual lap::core::Result< lap::core::Vector< ::ara::core::String > >         GetAllKeys() const noexcept override;
        KeyExists               = 2;    // virtual lap::core::Result< ::ara::core::Bool >                                             KeyExists ( lap::core::StringView &key ) const noexcept override;
        GetValue                = 3;    // virtual lap::core::Result< KvsDataType >                                    GetValue( lap::core::StringView &key ) const noexcept override;
        SetValue                = 4;    // virtual lap::core::Result<void>                                             SetValue( lap::core::StringView &key, const KvsDataType &value ) noexcept override;
        RemoveKey               = 5;    // virtual lap::core::Result<void>                                             RemoveKey( lap::core::StringView &key ) noexcept override;
        RecoveryKey             = 6;    // virtual lap::core::Result<void>                                             RecoveryKey( lap::core::StringView &key ) noexcept override;
        ResetKey                = 7;    // virtual lap::core::Result<void>                                             ResetKey( lap::core::StringView &key ) noexcept override;
        RemoveAllKeys           = 8;    // virtual lap::core::Result<void>                                             RemoveAllKeys() noexcept override;
        SyncToStorage           = 9;    // virtual lap::core::Result<void>                                             SyncToStorage() const noexcept override;
        DiscardPendingChanges   = 10;   // virtual lap::core::Result<void>                                             DiscardPendingChanges() noexcept override;
    }
    Operate     operateID = 2;

    string      key = 3;
    string      authenticate = 4;

    // assign to KvsDataType
    //enum class EKvsDataTypeIndicate : ::ara::core::UInt32
    //{ 
    //    DataType_int8_t         = 0,      =>      iValue
    //    DataType_uint8_t        = 1,      =>      iValue
    //    DataType_int16_t        = 2,      =>      iValue
    //    DataType_uint16_t       = 3,      =>      iValue
    //    DataType_int32_t        = 4,      =>      iValue
    //    DataType_uint32_t       = 5,      =>      uiValue
    //    DataType_int64_t        = 6,      =>      lValue
    //    DataType_uint64_t       = 7,      =>      ulValue
    //    DataType_bool           = 8,      =>      bValue
    //    DataType_float          = 9,      =>      fValue
    //    DataType_double         = 10,     =>      dValue
    //    DataType_string         = 11,     =>      strValue
    //};
    oneof       value {
        int32   int8Value       = 11;
        int32   uint8Value      = 12;
        int32   int16Value      = 13;
        int32   uint16Value     = 14;
        int32   int32Value      = 15;
        uint32  uint32Value     = 16;
        int64   int64Value      = 17;
        uint64  uint64Value     = 18;
        bool    bValue          = 19;
        float   fValue          = 20;
        double  dValue          = 21;
        string  strValue        = 22;
    }

    uint32  crc32 = 23;
}

// The response for operate status
// The result is error code, 0 is success
//
message kvsRemoteResponse {
    uint64  sessionID       = 1;
    int32   operateID       = 2;
    int32   errorcode       = 3;
    string  comment         = 4;
}